test_suite/tests/errors/duplicate_attribute.stderr
error: Duplicate attribute `trace`
 --> tests/errors/duplicate_attribute.rs:5:18
  |
5 |         #[trace, trace]
  |                  ^^^^^
